--- a/src/formats/inchi103/CMakeLists.txt
+++ b/src/formats/inchi103/CMakeLists.txt
@@ -17,6 +17,8 @@ set_target_properties(inchi PROPERTIES
                             SOVERSION ${INCHI_MAJ_VER}
                             DEFINE_SYMBOL _USRDLL
 )
+export(TARGETS inchi APPEND FILE "${OB_EXPORTS_FILE}")
+
 install(TARGETS inchi
                 RUNTIME DESTINATION ${BIN_INSTALL_DIR}
                 LIBRARY DESTINATION ${LIB_INSTALL_DIR}
