--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -179,6 +179,7 @@ endif(MSVC)
 export(TARGETS openbabel APPEND FILE "${OB_EXPORTS_FILE}")
 
 install(TARGETS openbabel
+  EXPORT openbabel-targets
   RUNTIME DESTINATION ${BIN_INSTALL_DIR}
   LIBRARY DESTINATION ${LIB_INSTALL_DIR}
   ARCHIVE DESTINATION ${LIB_INSTALL_DIR}
