--- a/OpenBabel2Config.cmake.in
+++ b/OpenBabel2Config.cmake.in
@@ -2,7 +2,6 @@
 get_filename_component(OpenBabel2_INSTALL_PREFIX "${OpenBabel2_DIR}@REL_REF@"
   ABSOLUTE)
 
-set(OpenBabel2_INSTALL_PREFIX  "@OB_INSTALL_PREFIX@")
 set(OpenBabel2_VERSION_MAJOR   "@BABEL_MAJ_VER@")
 set(OpenBabel2_VERSION_MINOR   "@BABEL_MIN_VER@")
 set(OpenBabel2_VERSION_PATCH   "@BABEL_PATCH_VER@")
@@ -11,3 +10,6 @@ set(OpenBabel2_VERSION         "@BABEL_VERSION@")
 set(OpenBabel2_INCLUDE_DIRS "@OpenBabel2_INCLUDE_DIRS@")
 set(OpenBabel2_EXPORTS_FILE "@OB_EXPORTS_FILE@")
 set(OpenBabel2_ENABLE_VERSIONED_FORMATS "@ENABLE_VERSIONED_FORMATS@")
+
+# Include the exports file to import the exported OpenBabel targets
+include("${OpenBabel2_EXPORTS_FILE}")
