* src/dlhandler_unix.cpp: Added code for MinGW. Now can find formats, even when run from build tree (set BABEL_LIBDIR). 	* src/dlhandler_win32.cpp: Removed code for Cygwin and MinGW, and a commented out section 	* src/formats/CMakeLists.txt: Removed XML formats from MINIMAL_BUILD
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3751 71e0b675-c112-0410-beda-96664073b5c2

--- a/src/formats/CMakeLists.txt
+++ b/src/formats/CMakeLists.txt
@@ -212,6 +212,7 @@ foreach(format ${formats})
 endforeach(format)
 endif(MSVC)
 
+if(NOT MINIMAL_BUILD)
 if(MSVC)
   set(xmlsources "")
   foreach(format ${formats_xml})
@@ -242,3 +243,4 @@ foreach(format ${formats_xml})
                         SUFFIX ${MODULE_EXTENSION})
 endforeach(format)
 endif(MSVC)
+endif(NOT MINIMAL_BUILD)
