Minor fixes for warnings. Set some eol:style to native to avoid inconsistent line-endings in svgformat.cpp.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3753 71e0b675-c112-0410-beda-96664073b5c2

--- a/src/formats/CMakeLists.txt
+++ b/src/formats/CMakeLists.txt
@@ -85,7 +85,7 @@ set(formats_misc
       yasaraformat
       )
 
-if(SHARED_POINTER)
+if(MSVC90 OR Boost_FOUND)
   set(formats_misc
     ${formats_misc}
     rxnformat
@@ -93,7 +93,7 @@ if(SHARED_POINTER)
     chemkinformat
     rsmiformat
   )
-endif(SHARED_POINTER)
+endif(MSVC90 OR Boost_FOUND)
 
 if(WITH_INCHI)
   add_definitions(-DINCHI_LINK_AS_DLL)
@@ -128,12 +128,12 @@ if(LIBXML2_FOUND)
     pubchem
     xmlformat
   )
-  if(SHARED_POINTER)
+  if(MSVC90 OR Boost_FOUND)
     set(formats_xml
         ${formats_xml}
         cmlreactformat
     )
-  endif(SHARED_POINTER)
+  endif(MSVC90 OR Boost_FOUND)
 endif(LIBXML2_FOUND)
 
 if(NOT WIN32)
