Minor correction to previous commit. Should be using BINARY_DIR.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3768 71e0b675-c112-0410-beda-96664073b5c2

--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -183,7 +183,7 @@ if (PERL_BINDINGS)
       add_custom_target(bindings_perl ALL
         COMMAND ${PERL_EXECUTABLE} ${openbabel_SOURCE_DIR}/scripts/perl/Makefile.PL
             DEPENDS ${openbabel_SOURCE_DIR}/scripts/perl/openbabel-perl.cpp
-            WORKING_DIRECTORY ${openbabel_SOURCE_DIR}/scripts
+            WORKING_DIRECTORY ${openbabel_BINARY_DIR}/scripts
         )
     
     else (NOT MSVC)
