Add spectrophores to cmake build system
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3828 71e0b675-c112-0410-beda-96664073b5c2

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -113,6 +113,7 @@ set(openbabel_srcs
     ring.cpp
     rotamer.cpp
     rotor.cpp
+    spectrophore.cpp
     tokenst.cpp
     transform.cpp
     typer.cpp
