Changes from win32 build: * src/spectrophores.cpp: Replace double var[dynamicSize] with std::vector. Dynamic sized arrays are not standard C++ and not supported by MSVC. * tools/obspectrophore.cpp, tools/getopt.[h/c]: Use custom getopt for MSVC builds * all files: replace "or" with "||" and "and" with "&&" (again, not supported by MSVC)
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3835 71e0b675-c112-0410-beda-96664073b5c2

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -16,7 +16,6 @@ else(MINIMAL_BUILD)
         obprop
         obrotamer
         obrotate
-        obspectrophore
   )
 
   # no getopt on windows
@@ -42,3 +41,16 @@ foreach(tool ${tools})
                   ARCHIVE DESTINATION lib
   )
 endforeach(tool)
+
+# obspectrophore -- requires getopt
+add_executable(obspectrophore obspectrophore.cpp getopt.c)
+target_link_libraries(obspectrophore ${BABEL_LIBRARY})
+if(MSVC)
+  set_target_properties(obspectrophore PROPERTIES
+	RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+endif(MSVC)
+install(TARGETS obspectrophore
+                RUNTIME DESTINATION bin
+                LIBRARY DESTINATION lib
+                ARCHIVE DESTINATION lib
+)
