* windows-vc2008/include/*, windows-vc2008/libs/i386/*: Add include 	files and compiled libraries from bsd-xdr (required for xtcformat.cpp 	under MSVC). BSD license. 	* src/formats/CMakeLists.txt: Use the xdr library when compiling with 	MSVC 	* windows-vc2008/default_build.bat: Set the location of the xdr 	library 	* CMakeLists.txt: Ensure that the cmake configure finds the xdr 	include files under MSVC 	* src/formats/xtcformat.cpp: Rename 'small' to 'small_' as small is a 	typedef for 'char' under MSVC (or something like this)
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3843 71e0b675-c112-0410-beda-96664073b5c2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,6 +116,12 @@ if(wxWidgets_FOUND)
   include_directories(${wxWidgets_INCLUDE_DIRS})
 endif(wxWidgets_FOUND)
 
+if(MSVC)
+  include_directories(${openbabel_SOURCE_DIR}/windows-vc2008/include)
+  # The following line is required for check_include_file(rpc/xdr.h ...) below
+  set(CMAKE_REQUIRED_INCLUDES ${openbabel_SOURCE_DIR}/windows-vc2008/include)
+endif(MSVC)
+
 include(CheckIncludeFile)
 include(CheckIncludeFileCXX)
 include(CheckSymbolExists)
@@ -137,6 +143,7 @@ check_symbol_exists(strncasecmp   "string.h"   HAVE_STRNCASECMP)
 
 set(CMAKE_EXTRA_INCLUDE_FILES time.h)
 check_type_size(clock_t CLOCK_T)
+
 
 # Get the GCC version - from KDE4 cmake files
 if(CMAKE_COMPILER_IS_GNUCXX)
