Add some complete examples. These can optionally be build by setting BUILD_EXAMPLES to ON. The examples are found in doc/examples and are included in the doxygen documentation.
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3861 71e0b675-c112-0410-beda-96664073b5c2

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -27,3 +27,8 @@ IF(BUILD_DOCS)
         WORKING_DIRECTORY ${openbabel_SOURCE_DIR}
     )
 ENDIF(BUILD_DOCS)
+
+OPTION(BUILD_EXAMPLES "Build Open Babel examples" OFF)
+IF(BUILD_EXAMPLES)
+   add_subdirectory(examples)
+ENDIF(BUILD_EXAMPLES)
