Alternative method for read-conformers which maintains code segregation (no chemistry in OBConversion)
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3881 71e0b675-c112-0410-beda-96664073b5c2

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -59,6 +59,7 @@ set(ops
   ops/loader.cpp
   ops/optransform.cpp
   ops/partialcharges.cpp
+  ops/readconformers.cpp
   ops/sort.cpp
   ops/xout.cpp
 )
