Documentation updates + fix doxygen warnings
git-svn-id: https://openbabel.svn.sourceforge.net/svnroot/openbabel/openbabel/trunk@3883 71e0b675-c112-0410-beda-96664073b5c2

--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -581,7 +581,8 @@ WARN_LOGFILE           =
 # directories like "/usr/src/myproject". Separate the files or directories
 # with spaces.
 
-INPUT                  = include/openbabel \
+INPUT                  = doc/modules.h \
+                         include/openbabel \
                          include/openbabel/math \
                          include/openbabel/stereo \
                          src/ \
